flicker fix

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1941,6 +1941,7 @@ a.bigplaybutton {
     font-size: 22px;
     visibility: visible;
     transition: transform 550ms, top 420ms;
+    -webkit-backface-visibility: hidden; 
 }
 .hintlabel.guessnum {
     margin: 0 auto;
